serie1 exo 12 final

--- a/Serie_1_Exo_12/composer.json
+++ b/Serie_1_Exo_12/composer.json
@@ -2,10 +2,10 @@
   "autoload": {
     "psr-4": {
       "Controllers\\": "app\\Controllers",
-      "Entity\\": "app\\Entity",
       "Models\\": "app\\Models",
       "Util\\": "util",
-      "Configuration\\": "config\\Configuration"
+      "Configuration\\": "config\\Configuration",
+      "Entity\\": "app\\Entity"
     }
   },
   "require": {
